--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </header>
             <p>Hi, my name is <span class="name">Mithlesh Kumar.</span></p>
             <h2 class="Design">I Design the web.</h2>
-            <p>I'm a student specializing in HTML, CSS, user experience, and no-code technologies.</p>
+            <p>I'm a student specializing in HTML, CSS, user experience, and  technologies.</p>
         </div>
     </section>
     <section class="projects" id="projects">
@@ -61,7 +61,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://www.saimithlesh.me" target="_blank"><img src="images/img2.png"
+                    <a href="https://www.saimithlesh.freewebhostmost.com." target="_blank"><img src="images/img2.png"
                             alt="Game" /></a>
                     <figcaption>
                         <a href="https://www.saimithlesh.freewebhostmost.com/" target="_blank">
@@ -75,7 +75,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://www.saimithlesh.me" target="_blank"><img src="images/img3.png"
+                    <a href="#" target="_blank"><img src="images/img3.png"
                             alt="Game." /></a>
                     <figcaption>
                         <a href="#" target="_blank">
