--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
             <p>I'm a student specializing in HTML, CSS, user experience, and  technologies.</p>
         </div>
     </section>
+    <section class="About" id="about">
+        <div id="education">
+            <h2 class="heading">Education</h2>
+            <div class="education-block">
+                <h3>NRI Junior College</h3>
+                <span class="education-date">Sept 2021 - Sept 2023</span>
+                <h4>MPC</h4>
+                <p>
+                    Completed my intermediate studies with a focus on Mathematics, Physics, and Chemistry.
+                </p>
+            </div>
+            <div class="education-block">
+                <h3>CMR Engineering College</h3>
+                <span class="education-date">Sept 2023 - Sept 2027</span>
+                <h4>Bachelor of Science in Computer Science</h4>
+                <ul>
+                    <li>Learning full-stack web development.</li>
+                    <li>Engaged in various programming.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section class="projects" id="projects">
         <div class="container">
             <h2>Pojects i have done</h2>
