--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Markanti Mithlesh Kumar, a passionate web designer specializing in HTML, CSS, and user experience. Explore my projects, education, and contact details.">
+    <meta name="keywords" content="Mithlesh Kumar, portfolio, web designer, HTML, CSS, user experience, projects, contact">
+    <meta name="author" content="Markanti Mithlesh Kumar">
+    <meta property="og:title" content="Markanti Mithlesh Kumar || Portfolio">
+    <meta property="og:description" content="Portfolio of Markanti Mithlesh Kumar, showcasing skills in web design and user experience.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-portfolio-url.com">
+    <meta property="og:image" content="https://your-portfolio-url.com/assets/portfolio-preview.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Markanti Mithlesh Kumar || Portfolio">
+    <meta name="twitter:description" content="Explore the portfolio of Mithlesh Kumar, featuring web design projects, skills, and contact information.">
     <title>Markanti Mithlesh Kumar || Portfolio</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
@@ -57,7 +68,7 @@
             <div class="education-block">
                 <h3>CMR Engineering College</h3>
                 <span class="education-date">Sept 2023 - Sept 2027</span>
-                <h4>Bachelor of Science in Computer Science</h4>
+                <h4>BTECH in CSE(AI&ML)</h4>
                 <ul>
                     <li>Learning full-stack web development.</li>
                     <li>Engaged in various programming.</li>
@@ -83,7 +94,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://www.saimithlesh.freewebhostmost.com." target="_blank"><img src="images/img2.png"
+                    <a href="https://www.saimithlesh.freewebhostmost.com/" target="_blank"><img src="images/img2.png"
                             alt="Game" /></a>
                     <figcaption>
                         <a href="https://www.saimithlesh.freewebhostmost.com/" target="_blank">
