--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <p>I’m always up for challenges to stretch my creativity. Let's get together and make something interesting.
             </p>
             <button class="btn">
-                Email Me
+                <a href="contact.html" target="_blank">Email Me</a>
             </button>
         </div>
     </section>
