--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <section id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/mithlesh934639@gmail.com">
+            <form method="POST" action="https://formspree.io/f/movvbzwn">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
