--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <section class="projects" id="projects">
         <div class="container">
-            <h2>Pojects i have done</h2>
+            <h2>Projects i have done</h2>
             <div class="topgrid">
                 <figure>
                     <a href="https://www.saimithlesh.me" target="_blank"><img src="images/img1.png"
