--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="#" target="_blank"><img src="images/img3.png"
+                    <a href="#" target="_blank"><img src="images/screenshot.png"
                             alt="Game." /></a>
                     <figcaption>
-                        <a href="#" target="_blank">
-                            <h3>Rock-Paper-Scissors</h3>
+                        <a href="https://www.saimithlesh.me/skillcraft_technology/SCT_WD_2/" target="_blank">
+                            <h3>Beautiful Stop-Watch</h3>
 
                             <ul>
                                 <li>HTML</li>
