--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="#" target="_blank"><img src="images/screenshot.png"
-                            alt="Game." /></a>
+                    <a href="https://www.saimithlesh.me/skillcraft_technology/SCT_WD_2/" target="_blank"><img src="images/screenshot.png"
+                            alt="Stop-Watch." /></a>
                     <figcaption>
                         <a href="https://www.saimithlesh.me/skillcraft_technology/SCT_WD_2/" target="_blank">
                             <h3>Beautiful Stop-Watch</h3>
