--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:description" content="Explore the portfolio of Mithlesh Kumar, featuring web design projects, skills, and contact information.">
     <title>Markanti Mithlesh Kumar || Portfolio</title>
     <link rel="stylesheet" href="CSS/style.css">
+<meta name="google-site-verification" content="XFTYppupEHqoTCJ_zJLB1OQ9FwyjF9VLhboCY-YwGak" />
 </head>
 
 <body>
