--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <h2>Projects i have done</h2>
             <div class="topgrid">
                 <figure>
-                    <a href="https://www.saimithlesh.me" target="_blank"><img src="images/img1.png"
+                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_4/"><img src="images/img1.png"
                             alt="CSS Projects" /></a>
                     <figcaption>
-                        <a href="https://www.saimithlesh.me" target="_blank">
+                        <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_4/">
                             <h3>CSS Projects</h3>
                             <ul>
                                 <li>HTML</li>
@@ -95,10 +95,10 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://www.saimithlesh.freewebhostmost.com/" target="_blank"><img src="images/img2.png"
+                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_3/" target="_blank"><img src="images/img2.png"
                             alt="Game" /></a>
                     <figcaption>
-                        <a href="https://www.saimithlesh.freewebhostmost.com/" target="_blank">
+                        <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_3/">
                             <h3>TIC-TAC-TOE</h3>
                             <ul>
                                 <li>HTML</li>
@@ -109,10 +109,10 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://www.saimithlesh.me/skillcraft_technology/SCT_WD_2/" target="_blank"><img src="images/screenshot.png"
+                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_2/" target="_blank"><img src="images/screenshot.png"
                             alt="Stop-Watch." /></a>
                     <figcaption>
-                        <a href="https://www.saimithlesh.me/skillcraft_technology/SCT_WD_2/" target="_blank">
+                        <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_2/" target="_blank">
                             <h3>Beautiful Stop-Watch</h3>
 
                             <ul>
