--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2>Projects i have done</h2>
             <div class="topgrid">
                 <figure>
-                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_4/"><img src="images/img1.png"
+                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_4/"><img src="images/todolist.png"
                             alt="CSS Projects" /></a>
                     <figcaption>
                         <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_4/">
@@ -95,7 +95,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_3/" target="_blank"><img src="images/img2.png"
+                    <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_3/" target="_blank"><img src="images/game.png"
                             alt="Game" /></a>
                     <figcaption>
                         <a href="https://mithlesh-95.github.io/skillcraft_technology/SCT_WD_3/">
